<resources>
    <string name="app_name">prototipoTienda</string>
    <string name="lblcorreot">Correo Electronico</string>
    <string name="pistacorre">example201@gmail.com</string>
    <string name="lblcontra">Contraseña</string>
    <string name="lblIngresar">Ingresar</string>
    <string name="lblRegistrar">Registrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
